--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   shared_preferences: ^2.5.2
   flutter_rating_bar: ^4.0.0
   flutter_svg: ^2.0.17
+  dio: ^5.8.0+1
+  flutter_paypal_payment: ^1.0.8
 
 
 
