--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_paypal_payment: ^1.0.8
   flutter_staggered_animations: ^1.1.1
   flutter_lints: ^5.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
