--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- For Android 9 and below -->
     <application
-        android:label="infantry_house_app"
+        android:label="Infantry House App"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
