--- a/.github/workflows/flutter_ci_cd.yml
+++ b/.github/workflows/flutter_ci_cd.yml
@@ -61,9 +61,9 @@ jobs:
 #      - name: Run tests
 #        run: flutter test
 
-      # Build APK
-      - name: Build APK
-        run: flutter build apk --release
+      # Build AAB
+      - name: Build AAB
+        run: flutter build appbundle --release
 
       # Upload APK to Google Drive
       - name: Upload APK to Google Drive
@@ -73,3 +73,4 @@ jobs:
           filename: build/app/outputs/flutter-apk/app-release.apk
           folderId: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
           name: infantry_house_app-release.apk
+          overwrite: true
