--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   flutter_lints: ^5.0.0
   intl: ^0.19.0
+  firebase_core: ^4.1.0
+  cloud_firestore: ^6.0.1
+  firebase_auth: ^6.0.2
+  cloud_functions: ^6.0.1
 
 dev_dependencies:
   flutter_test:
