--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   cloud_firestore: ^6.0.1
   firebase_auth: ^6.0.2
   cloud_functions: ^6.0.1
+  collection: ^1.19.1
 
 dev_dependencies:
   flutter_test:
