--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   firebase_auth: ^6.0.2
   cloud_functions: ^6.0.1
   collection: ^1.19.1
+  animations: ^2.0.11
+  font_awesome_flutter: ^10.9.1
 
 dev_dependencies:
   flutter_test:
