--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   collection: ^1.19.1
   animations: ^2.0.11
   font_awesome_flutter: ^10.9.1
+  animate_do: ^4.2.0
 
 dev_dependencies:
   flutter_test:
