--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   animations: ^2.0.11
   font_awesome_flutter: ^10.9.1
   animate_do: ^4.2.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
