--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   font_awesome_flutter: ^10.9.1
   animate_do: ^4.2.0
   shimmer: ^3.0.0
+  connectivity_plus: ^7.0.0
 
 dev_dependencies:
   flutter_test:
