--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   shimmer: ^3.0.0
   connectivity_plus: ^7.0.0
   url_launcher: ^6.3.2
+  firebase_messaging: ^16.0.3
+  flutter_local_notifications: ^17.0.0
+  http: ^1.5.0
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +82,10 @@ flutter_launcher_icons:
   image_path: "assets/images/1024.png"
   adaptive_icon_background: "#ffffff" # For adaptive icons in Android
   #  adaptive_icon_foreground: "assets/icon/adaptive_foreground.png"
-
+  # ✅ Generate notification icon too
+  notification_icon:
+    image_path: "assets/images/1024.png"
+    icon_name: "ic_stat_notification"
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
